--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+  <!-- <link rel="icon" type="image/svg+xml" href="/icon.svg" />-->
+  <link rel="shortcut icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- SEO Meta Tags -->
   <meta name="description" content="NewsNow - 实时新闻聚合阅读器，汇集全球热点新闻，提供优雅的阅读体验" />
@@ -69,7 +70,7 @@
       window.history.replaceState({}, document.title, window.location.pathname)
     }
   </script>
-  <title>NewsNow</title>
+  <title>幻凡ss</title>
 </head>
 
 <body>
