--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     {
       "@context": "https://schema.org",
       "@type": "WebSite",
-      "name": "NewsNow",
-      "url": "https://newsnow.busiyi.world",
+      "name": "幻凡ss",
+      "url": "https://newsnow.hfanss.com",
       "description": "实时新闻聚合阅读器，汇集全球热点新闻，提供优雅的阅读体验",
     }
   </script>
